[gd_scene load_steps=8 format=3 uid="uid://cf000sk5aqqc8"]

[ext_resource type="Texture2D" uid="uid://dmaqm4vy34bla" path="res://Assets/Placeholder/Title_Text.png" id="1_h0vqr"]
[ext_resource type="Script" path="res://Assets/Scripts/title_screen.gd" id="1_kkvyd"]
[ext_resource type="Theme" uid="uid://chs84xmngfdmm" path="res://Assets/Menus/title_screen.tres" id="3_w2rv4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7usf"]
size = Vector2(736, 194)

[sub_resource type="Animation" id="Animation_j4e25"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ofrcq"]
resource_name = "dissolve"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xhkc5"]
_data = {
"RESET": SubResource("Animation_j4e25"),
"dissolve": SubResource("Animation_ofrcq")
}

[node name="title_screen" type="Node2D"]
script = ExtResource("1_kkvyd")

[node name="moving_title_text" type="AnimatableBody2D" parent="."]
position = Vector2(0, -1)

[node name="TitleText" type="Sprite2D" parent="moving_title_text"]
position = Vector2(574.722, 256)
scale = Vector2(0.601331, 0.599942)
texture = ExtResource("1_h0vqr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="moving_title_text"]
position = Vector2(592, 142)
shape = SubResource("RectangleShape2D_e7usf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xhkc5")
}

[node name="title_screen_buttons" type="BoxContainer" parent="."]
offset_left = 392.0
offset_top = 320.0
offset_right = 760.0
offset_bottom = 524.0
theme = ExtResource("3_w2rv4")
theme_override_constants/separation = 30
vertical = true

[node name="Start" type="Button" parent="title_screen_buttons"]
layout_mode = 2
text = "Start"

[node name="Options" type="Button" parent="title_screen_buttons"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="title_screen_buttons"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="title_screen_buttons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="title_screen_buttons/Quit" to="." method="_on_quit_pressed"]
